--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@
          url('../fonts/opensans-regular.svg#LatoRegular') format('svg');
     font-weight: normal;
     font-style: normal;
-
+	font-display: swap;
 }
 
 
@@ -21,7 +21,7 @@
          url('../fonts/opensans-bold.svg#LatoRegular') format('svg');
     font-weight: normal;
     font-style: normal;
-
+	font-display: swap;
 }
 
 
@@ -34,14 +34,8 @@
          url('../fonts/opensans-semibold.svg#open_sanssemibold') format('svg');
     font-weight: normal;
     font-style: normal;
-
+	font-display: swap;
 }
-
-
-
-
-
-
 
 section, footer {
 	background: #fffcfc;
@@ -62,15 +56,6 @@ a:focus{
 .container{
 	max-width: 1130px;
 }
-
-
-
-
-
-
-
-
-
 
 /*		Header 		*/
 
@@ -100,18 +85,18 @@ header {
   /* change the calc height to a percentage height to get alternate responsive behavior*/
 }
 
-header .logo{
+.logo{
 	display: table-cell;
 	margin: 45px 100px 0 0;
 }
 
-header .logo img{
+.logo img{
 	width: 200px;
 	border-radius: 5px 20px 5px;
 	box-shadow: 0 8px 6px -6px black;
 }
 
-header .burger_icon{
+.burger_icon{
 	display: none;
 	float: right;
 	background: #ffffff;
@@ -129,30 +114,30 @@ header .burger_icon{
 	margin: 45px 10px 0 0;
 }
 
-header .burger_icon:hover{
+.burger_icon:hover{
 	cursor: pointer;
 }
 
-header .burger_icon.active{
+.burger_icon.active{
 	background: #359663;
 	color: #ffffff;
 }
 
-header nav{
+nav{
 	margin-top: 50px;
 	display: table-cell;
 }
 
-header nav li{
+nav li{
 	float: left;
 	margin-left: 40px;
 }
 
-header nav li:first-child{
+nav li:first-child{
 	margin: 0;
 }
 
-header nav li a{
+nav li a{
 	color: #fff;
 	font-family: "open_regular", Helvetica, Arial, sans-serif;
 	font-size: 16px;
@@ -163,36 +148,27 @@ header nav li a{
 	-webkit-transition: all .2s linear;
 }
 
-header nav li a:hover,
-header nav li a:focus{
+nav li a:hover,
+nav li a:focus{
 	text-decoration: none;
 	color: #B7EFD1!important;
 }
 
-header .social{
+.social{
 	display: table-cell;
 	margin-top: 45px;
 }
 
-header .social li{
+.social li{
 	float: left;
 	margin-left: 20px;
 	border-radius: 5px 20px 5px;
 	box-shadow: 0 8px 6px -6px black;
 }
 
-header .social li:first-child{
+.social li:first-child{
 	margin: 0;
 }
-
-
-
-
-
-
-
-
-
 
 /*		Hero section 		*/
 
@@ -205,7 +181,7 @@ header .social li:first-child{
 	background-size: cover;
 }
 
-.hero .caption{
+.caption{
 	position: absolute;
 	max-width: 550px;
 	margin-left: 80px;
@@ -216,7 +192,7 @@ header .social li:first-child{
 	-o-transform:translate(0,-50%);
 }
 
-.hero .caption h1{
+.caption h1{
 	color: #525252;
 	font-family: "open_bold", Helvetica, Arial, sans-serif;
 	font-size: 34px;
@@ -224,7 +200,7 @@ header .social li:first-child{
 	word-break: break-word;
 }
 
-.hero .caption p{
+.caption p{
 	color: #6d6c6c;
 	font-family: "open_regular", Helvetica, Arial, sans-serif;
 	font-size: 16px;
@@ -232,11 +208,7 @@ header .social li:first-child{
 	margin: 15px 0 35px 0;
 }
 
-#slider .caption p{
-	margin: 0;
-}
-
-a.app_store_btn{
+.app_store_btn{
 	display: inline-block;
 	text-decoration: none;
 	padding: 15px 40px;
@@ -275,25 +247,25 @@ a.app_store_btn{
 }
 
 
-a.app_store_btn:hover,
-a.app_store_btn:focus{
+.app_store_btn:hover,
+.app_store_btn:focus{
 	border-color: #41c27d;
 	color: #41c27d!important;
 }
 
-a.app_store_btn:hover .play_icon{
+.app_store_btn:hover .play_icon{
 	background: url('../img/play_hover.png') no-repeat;
 }
 
-a.app_store_btn:hover .iphone_icon{
+.app_store_btn:hover .iphone_icon{
 	background: url('../img/iphone_app_hover.png') no-repeat;
 }
 
-a.app_store_btn:hover .android_icon{
+.app_store_btn:hover .android_icon{
 	background: url('../img/android_app_hover.png') no-repeat;
 }
 
-a.app_link{
+.app_link{
 	text-transform: lowercase;
 	letter-spacing: .5px;
 	color: #636363;
@@ -301,17 +273,17 @@ a.app_link{
 	font-size: 16px;
 }
 
-a.app_link:hover,
-a.app_link:focus{
+.app_link:hover,
+.app_link:focus{
 	text-decoration: none;
 	color: #41c27d!important;
 }
 
-a.app_store_btn,
+.app_store_btn,
 .play_icon,
 .iphone_icon,
 .android_icon,
-a.app_link{
+.app_link{
 	transition: all .2s linear;
 	-o-transition: all .2s linear;
 	-moz-transition: all .2s linear;
@@ -328,12 +300,6 @@ a.app_link{
     z-index: 9999;
     background: rgba(0, 0, 0, .8);
     display: none;
-}
-
-.about_video iframe{
-    width: 100%;
-    height: 100%;
-    z-index: 9999;
 }
 
 .close_video{
@@ -354,15 +320,6 @@ a.app_link{
   font-size: 1.4em;
   font-weight: bolder;
 }
-
-
-
-
-
-
-
-
-
 
 /*		Featured on section 		*/
 
@@ -385,38 +342,29 @@ a.app_link{
 	margin-left: 0;
 }
 
-
-
-
-
-
-
-
-
-
 /*		About section 		*/
 
 .about{
 	padding: 100px 0;
 }
 
-.about .iphone{
+.iphone{
 	max-width: 339px;
 	position: relative;
 	display: inline-block;
 	text-align: center;
 }
 
-.about .iphone img{
+.iphone img{
 	width: 100%;
 	height: auto;
 }
 
-.about .features_list{
+.features_list{
 	margin-left: 50px;
 }
 
-.about .features_list h1{
+.features_list h1{
 	color: #525151;
 	font-family: "open_bold", Helvetica, Arial, sans-serif;
 	font-size: 34px;
@@ -426,7 +374,7 @@ a.app_link{
 	word-break: break-word;
 }
 
-.about .features_list p{
+.features_list p{
 	color: #767272;
 	font-family: "open_regular", Helvetica, Arial, sans-serif;
 	font-size: 16px;
@@ -434,11 +382,11 @@ a.app_link{
 	line-height: 32px;
 }
 
-.about .features_list ul{
+.features_list ul{
 	margin-bottom: 30px;
 }
 
-.about .features_list ul li{
+.features_list li{
 	display: block;
 	position: relative;
 	color: #6c6c6c;
@@ -453,43 +401,34 @@ a.app_link{
 	-webkit-transition: all .2s linear;
 }
 
-.about .features_list ul li.camera_icon{
+.camera_icon{
 	background: url('../img/icon1.png') no-repeat;
 	background-position: 0 15px;
 }
 
-.about .features_list ul li.video_icon{
+.video_icon{
 	background: url('../img/icon2.png') no-repeat;
 	background-position: 0 15px;
 }
 
-.about .features_list ul li.eye_icon{
+.eye_icon{
 	background: url('../img/icon3.png') no-repeat;
 	background-position: 0 14px;
 }
 
-.about .features_list ul li.pic_icon{
+.pic_icon{
 	background: url('../img/icon4.png') no-repeat;
 	background-position: 0 14px;
 }
 
-.about .features_list ul li.loc_icon{
+.loc_icon{
 	background: url('../img/icon5.png') no-repeat;
 	background-position: 3px 13px;
 }
 
-.about .features_list ul li span{
+.features_list li span{
 	display: inline-block;
 }
-
-
-
-
-
-
-
-
-
 
 /*		App features 		*/
 
@@ -520,22 +459,13 @@ a.app_link{
 	line-height: 28px;
 }
 
-.app_features .details{
+.details{
 	margin-bottom: 80px;
 }
 
-.app_features .details:nth-child(3n+1){
+.details:nth-child(3n+1){
 	clear: both;
 }
-
-
-
-
-
-
-
-
-
 
 /*		Testimonials section 		*/
 
@@ -543,18 +473,18 @@ a.app_link{
 	padding: 100px 0;
 }
 
-.testimonials .testimonials_list{
+.testimonials_list{
 	max-width: 820px;
 	margin: 0 auto;
 }
 
-.testimonials .testimonials_list blockquote{
+blockquote{
 	border: 0;
 	padding: 0;
 	margin: 0;
 }
 
-.testimonials .testimonials_list blockquote p{
+blockquote p{
 	color: #757171;
 	font-family: "open_regular", Helvetica, Arial, sans-serif;
 	font-size: 18px;
@@ -562,86 +492,27 @@ a.app_link{
 	line-height: 36px;
 }
 
-.testimonials .testimonials_list blockquote footer:before,
-.testimonials .testimonials_list blockquote footer:after{
-	content: none;
-}
-
-.testimonials .testimonials_list blockquote .author,
-.testimonials .testimonials_list blockquote .job{
+.author, .job{
 	display: block;
 }
 
-.testimonials .testimonials_list blockquote .author{
+.author{
 	color: #4b4848;
 	font-family: "open_semibold", Helvetica, Arial, sans-serif;
 	font-size: 16px;
 	margin-bottom: 10px;
 }
 
-.testimonials .testimonials_list blockquote .job{
+.job{
 	color: #6e6d6d;
 	font-family: "open_regular", Helvetica, Arial, sans-serif;
 	font-size: 14px;
 }
 
-.#tslider{
+#tslider{
 	text-align: center!important;
 	position: relative!important;
 }
-
-#tslider .owl-controls{
-	display: block;
-	width: 100%;
-	text-align: center;
-	margin-top: 40px;
-	padding: 0;
-}
-
-#tslider .owl-controls .owl-prev,
-#tslider .owl-controls .owl-next{
-	display: inline-block;
-	width: 32px;
-	height: 32px;
-	background: url('../img/nav_arrow.png') no-repeat;
-	text-indent: -200px;
-	overflow: hidden;
-
-	transition: all .2s linear;
-	-o-transition: all .2s linear;
-	-moz-transition: all .2s linear;
-	-webkit-transition: all .2s linear;
-}
-
-#tslider .owl-controls .owl-prev{
-	background-position: 0 0;
-}
-#tslider .owl-controls .owl-next{
-	background-position: -33px 0;
-	margin-left: 40px;
-}
-
-#tslider .owl-controls .owl-prev:hover,
-#tslider .owl-controls .owl-next:hover{
-	cursor: pointer;
-	background: url('../img/nav_arrow_hover.png') no-repeat;
-}
-
-#tslider .owl-controls .owl-prev:hover{
-	background-position: 0 0;
-}
-#tslider .owl-controls .owl-next:hover{
-	background-position: -33px 0;
-}
-
-
-
-
-
-
-
-
-
 
 /*		Subscription section 		*/
 
@@ -655,14 +526,14 @@ a.app_link{
 	background-image: linear-gradient(bottom, #248888 0%, #248888 0.27%, #40c27d 99.46%, #40c27d 100%);
 }
 
-.sub_box .cta_text{
+.cta_text{
 	color: #fff;
 	font-family: "open_regular", Helvetica, Arial, sans-serif;
 	font-size: 20px;
 	margin-bottom: 50px;
 }
 
-.sub_box #mc-email{
+#mc-email{
 	display: inline-block;
 	width: 300px;
 	height: 50px;
@@ -689,7 +560,7 @@ a.app_link{
 
 }
 
-.sub_box #mc_submit{
+#mc_submit{
 	display: inline-block;
 	width: 60px;
 	height: 50px;
@@ -712,22 +583,19 @@ a.app_link{
 	vertical-align: middle;
 }
 
-.sub_box #mc_submit i{
+#mc_submit i{
 	display: inline-block;
 	width: 20px;
 	height: 14px;
 	vertical-align: middle;
-}
-
-#mc_submit i.icon{
 	background: url('../img/sub_icon.png') no-repeat;
 }
 
-#mc_submit i.loading{
+#mc_submit .loading{
 	background: url('../img/loading.gif') no-repeat;
 }
 
-.sub_box .message{
+.message{
 	display: block;
 	text-align: center;
 	color: #fff;
@@ -737,19 +605,10 @@ a.app_link{
 	margin-top: 20px;
 }
 
-.sub_box #error_msg,
-.sub_box #success_msg{
+#error_msg,
+#success_msg{
 	display: none;
 }
-
-
-
-
-
-
-
-
-
 
 /*		Footer 		*/
 
@@ -758,15 +617,15 @@ footer{
 	text-align: center;
 }
 
-footer .app_platform li{
+.app_platform li{
 	margin: 0 0 0 60px;
 }
 
-footer .app_platform li:first-child{
+.app_platform li:first-child{
 	margin: 0;
 }
 
-footer .copyright{
+.copyright{
 	margin-top: 60px;
 	color: #757171;
 	font-family: "open_regular", Helvetica, Arial, sans-serif;
@@ -774,17 +633,9 @@ footer .copyright{
 	letter-spacing: .5px;
 }
 
-footer .copyright a{
+.copyright a{
 	color: #565555;
 }
-
-
-
-
-
-
-
-
 
 /*		Responsive CSS 		*/
 
@@ -797,17 +648,16 @@ footer .copyright a{
 
 @media (max-width: 767px) {
 
-
 	/*		Header 		*/
-	header .logo{
+	.logo{
 		margin-right: 0;
 	}
 
-	header .burger_icon{
+	.burger_icon{
 		display: block;
 	}
 
-	header nav{
+	nav{
 		width: 100%;
 		float: none;
 		background: #248888;
@@ -817,44 +667,39 @@ footer .copyright a{
 		display: none;
 	}
 
-	header nav.show{
+	nav.show{
 		display: block;
 	}
 
 
-	header nav li{
+	nav li{
 		display: block;
 		width: 100%;
 		margin: 0;
 		text-align: center;
 	}
 
-	header nav li a{
+	nav li a{
 		display: block;
 		width: 100%;
 		padding: 20px 0;
 		border-bottom: 1px solid #389965;
 	}
 
-	header nav li:first-child a{
+	nav li:first-child a{
 		border-top: 1px solid #389965;
 	}
 
-	header .social{
+	.social{
 		display: none;
 	}
 
-	header .social li{
+	.social li{
 		margin-left: 10px;
 	}
 
-
-
-
-
-
 	/*		Hero section 		*/
-	.hero .caption{
+	.caption{
 		margin-left: 0;
 	}
 
@@ -866,10 +711,6 @@ footer .copyright a{
 		text-align: center;
 	}
 
-
-
-
-
 	/*		Featured on section		*/
 	.featured_on{
 		padding: 25px 0 5px 0!important;
@@ -879,47 +720,36 @@ footer .copyright a{
 		margin-bottom: 25px!important;
 	}
 
-
-
-
-
-
 	/*		About Section 		*/
-	.about .features_list {
+	.features_list {
 		text-align: center;
 		margin: 0;
 	}
 
-	.about .features_list ul li{
+	.features_list ul li{
 		text-indent: 0;
 		background: transparent!important;
 		margin-bottom: 20px;
 	}
 
-	.about .features_list ul li:last-child{
+	.features_list li:last-child{
 		margin: 0;
 	}
 
-	a.app_link{
+	.app_link{
 		display: block;
 		margin-top: 20px;
 	}
 
-
-
-
-
-
 	/*		Subscription section 		*/
-	.sub_box #mc-email,
-	.sub_box #mc_submit{
+	#mc-email, #mc_submit{
 		display: block;
 		width: 90%;
 		margin: 0 auto;
 		text-align: center;
 	}
-
-	.sub_box #mc_submit{
+	
+	#mc_submit{
 		margin-top: 20px;
 	}
 }
